--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ViciousCycles</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sample page</title>
+    <style>
+      body {
+        background-color: #e7fbfb;
+      }
+      header {
+        font-size: 4em;
+        text-align: center;
+        color: #010B5B;
+      }
+    </style>
+  </head>
+  <body>
+    <header>Sample page</header>
+  </body>
 </html>
