--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ViciousCycles</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vicious Cycles | Home</title>
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__sub-container">
+        <div class="logo-container">
+          <img src="images/logo.png" alt="Vicious Cycles Logo" class="logo-container__logo">
+          <h1 class="logo-container__company-name">Vicious Cycles</h1>
+        </div>
+        <nav class="nav-container">
+          <a class="nav-container__link">Catalog</a>
+          <a class="nav-container__link">News</a>
+          <a class="nav-container__link">Contacts</a>
+          <a class="nav-container__link">About</a>
+        </nav>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+  </body>
 </html>
