--- a/about.html
+++ b/about.html
@@ -7,7 +7,21 @@
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="header__sub-container">
+        <div class="logo-container">
+          <img src="images/logo.png" alt="Vicious Cycles Logo" class="logo-container__logo">
+          <h1 class="logo-container__company-name">Vicious Cycles</h1>
+        </div>
+        <nav class="nav-container">
+          <a href="index.html" class="nav-container__link">Home</a>
+          <a href="catalog.html" class="nav-container__link">Catalog</a>
+          <a href="news.html" class="nav-container__link">News</a>
+          <a href="contacts.html" class="nav-container__link">Contacts</a>
+          <a class="nav-container__link nav-container__link_active">About</a>
+        </nav>
+      </div>
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
   </body>
