--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                   <a href="news.html" class="nav-container__link">News</a>
                 </li>
                 <li class="dropdown__item">
-                  <a href="contacts.html" class="nav-container__link"
-                    >Contacts</a
-                  >
+                  <a href="contacts.html" class="nav-container__link">Contacts</a>
                 </li>
                 <li class="dropdown__item">
                   <a href="about.html" class="nav-container__link">About</a>
