--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
       </div>
     </header>
     <main class="main"></main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__sub-container">
+        <section class="vertical-alignment">
+          <h2>HELPFUL LINKS</h2>
+          <a class="link" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
+          <a class="link"  href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
+        </section>
+        <section>
+          <p class="copyrights">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
