--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             alt="Vicious Cycles Logo"
             class="logo-container__logo"
           />
-          <h1 class="logo-container__company-name">Vicious Cycles</h1>
+          <h2 class="logo-container__company-name">Vicious Cycles</h2>
         </div>
         <nav class="nav-container">
           <div class="nav-container__sub-container">
@@ -52,7 +52,11 @@
       <a class="link"  href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
     </aside>
     <main class="main">
-       <section class="scene"></section>
+       <section class="scene">
+         <div class="shadow">
+         </div>
+         <h1 class="scene__title">GET BIKE OF YOUR DREAM TODAY</h1>
+       </section>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
