--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
       <a class="link"  href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
     </aside>
     <main class="main">
-       <section class="scene">
-         <div class="shadow">
-         </div>
-         <h1 class="scene__title">GET BIKE OF YOUR DREAM TODAY</h1>
-       </section>
+      <section class="scene">
+        <h1 class="scene__title">GET BIKE OF YOUR DREAM TODAY</h1>
+        <a href="catalog.html" class="scene__button">GO TO CATALOG</a>
+        <div class="shadow"></div>
+      </section>
+      <section></section>
+      <section></section>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
