--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@
         <div class="shadow"></div>
       </section>
       <section></section>
-      <section></section>
+      <section class="info">
+        <h2>COVID-19</h2>
+        <p class="info__text">You can continue to support our business and our incredible employees by shopping with us, either in-store, online or curbside.</p>
+        <p class="info__text"><span class="info__text bold">Temporary Changes:</span></p>
+        <p class="info__text">Store capacity maybe limited. This is for your safety as well as ours. You may be asked to wait outside until space has freed up.</p>
+        <p class="info__text">Maintain a 6 foot personal space whenever possible. MASK required as per the respective city mandates. No Mask, no entry. We can assist you outside if needed.</p>
+        <p class="info__text">We are still practising enhanced cleaning protocols.</p>
+        <p class="info__text">We do currently have a backlog of service appointments so check with your store.</p>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
