--- a/index.html
+++ b/index.html
@@ -49,18 +49,31 @@
     <main class="main">
       <section class="scene">
         <h1 class="scene__title">GET BIKE OF YOUR DREAM TODAY</h1>
-        <a href="catalog.html" class="scene__button">GO TO CATALOG</a>
+        <a href="catalog.html" class="button">SHOP NOW</a>
         <div class="shadow"></div>
       </section>
-      <section></section>
       <section class="info">
         <h2>COVID-19</h2>
         <p class="info__text">You can continue to support our business and our incredible employees by shopping with us, either in-store, online or curbside.</p>
         <p class="info__text"><span class="info__text bold">Temporary Changes:</span></p>
         <p class="info__text">Store capacity maybe limited. This is for your safety as well as ours. You may be asked to wait outside until space has freed up.</p>
-        <p class="info__text">Maintain a 6 foot personal space whenever possible. MASK required as per the respective city mandates. No Mask, no entry. We can assist you outside if needed.</p>
+        <p class="info__text">Maintain a 6-foot personal space whenever possible. MASK required as per the respective city mandates. No Mask, no entry. We can assist you outside if needed.</p>
         <p class="info__text">We are still practising enhanced cleaning protocols.</p>
         <p class="info__text">We do currently have a backlog of service appointments so check with your store.</p>
+      </section>
+      <section class="card-container">
+        <div class="card-container__item">
+          <img alt="bike" src="images/bike.jpg" class="card-container__item__image" />
+          <h2 class="mt10">Bike Financing</h2>
+          <p class="mt10 fs2 card-container__item__text">Getting your dream bike is now easier than ever with the X-Card through Some Bank.</p>
+          <a href="" class="button">Learn More</a>
+        </div>
+        <div class="card-container__item">
+          <img alt="repair technician" src="images/repair_service.jpg" class="card-container__item__image"/>
+          <h2 class="mt10">Bike Repair</h2>
+          <p class="mt10 fs2 card-container__item__text">Whether you need a bike tune-up or a complete overhaul, our expert mechanics are here to help.</p>
+          <a href="" class="button">Learn More</a>
+        </div>
       </section>
     </main>
     <footer class="footer">
