--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
           <a href="" class="button">Learn More</a>
         </div>
       </section>
+      <section class="vertical-alignment now-hiring">
+        <h2 class="z1">NOW HIRING</h2>
+        <p class="fs2 z1">Motivated Cycling Enthusiasts</p>
+        <p class="fs2 z1">Training Wheels Included. Passion Required.</p>
+        <a href="" class="button">Apply Now</a>
+        <div class="shadow"></div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
