--- a/catalog.html
+++ b/catalog.html
@@ -51,12 +51,20 @@
     <footer class="footer">
       <div class="footer__sub-container">
         <section class="vertical-alignment">
-          <h2>HELPFUL LINKS</h2>
-          <a class="link" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
-          <a class="link"  href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
+          <h2>CONTACT US</h2>
+          <p class="contact-us-text">Vicious Cycles</p>
+          <p class="contact-us-text">123 Main St. <br> Anywhere, NC 27000</p>
+          <p class="contact-us-text">Phone: (919) 123-4567 Fax: (919) 123-9875</p>
+          <p class="contact-us-text">We are also on Twitter and Facebook.</p>
+          <div><i class="icon icon_twitter"></i><i class="icon icon_facebook"></i></div>
         </section>
-        <section>
-          <p class="copyrights">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
+        <section class="vertical-alignment">
+          <h2>HELPFUL LINKS</h2>
+          <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
+          <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
+        </section>
+        <section class="copyrights">
+          <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
         </section>
       </div>
     </footer>
