--- a/about.html
+++ b/about.html
@@ -49,19 +49,36 @@
     <main class="main">
       <article class="about-article about-article_first-background">
         <div class="about-article__sub-container z1 invert-color">
-          <h1>Who are Vicious Cycles?</h1>
-          <p class="about-article__text">Vicious Cycles is a local store for bikers. These can be casual bikes, mountain bikes, high-performance tricked-out BMX bikes, etc. Alternately, these can be Harley Davidson, an American Eagle, mopeds, scooters, Kawasaki’s, or even concept vehicles. The choice of item is up to you. What brands do you want to sell? Or be a dealer for? Vicious also sells accessories.</p>
+          <h1 class="about-article__title">Who are Vicious Cycles?</h1>
+          <p class="about-article__text">
+            Vicious Cycles is a local store for bikers.
+          </p>
+          <p class="about-article__text">
+            These can be casual bikes, mountain bikes, high-performance tricked-out BMX bikes, etc.
+          </p>
+          <p class="about-article__text">
+            Alternately, these can be Harley Davidson, an American Eagle, mopeds, scooters, Kawasaki’s, or even concept vehicles.
+          </p>
+          <p class="about-article__text">
+            The choice of item is up to you.
+          </p>
+          <p class="about-article__text">
+            What brands do you want to sell? Or be a dealer for? Vicious also sells accessories.
+          </p>
         </div>
         <div class="shadow"></div>
       </article>
       <article class="about-article">
         <div class="about-article__sub-container">
-          <h1>Our Philosophy</h1>
+          <h1 class="about-article__title">Our Philosophy</h1>
           <p class="about-article__text">
             Our philosophy is that when you choose your bike, you should choose it based on the folks who will not only build your bicycle, but also those who will help you get comfortable on the bike, as well as provide service down the road as you need it.
           </p>
           <p class="about-article__text">
-            The best things in life are pretty simple. Riding bikes with friends, discovering new places and finding new trails are definitely included. Riding bikes helps us to disconnect from the hectic and noisy world and connect with friends, nature and ourselves.
+            The best things in life are pretty simple. Riding bikes with friends, discovering new places and finding new trails are definitely included.
+          </p>
+          <p class="about-article__text">
+            Riding bikes helps us to disconnect from the hectic and noisy world and connect with friends, nature and ourselves.
           </p>
           <p class="about-article__text">
             It might just be the best thing ever.
@@ -89,23 +106,92 @@
       <article class="about-article">
         <img class="photo" src="images/random_dude.jpg" alt="owner's photo">
         <div class="about-article__sub-container">
-          <h1>Owner Bio</h1>
-          <p class="about-article__text">After spending my whole life on pedals, finishing my degree in mechanical engineering and working for two large companies making bikes I decided to change my priorities in life. I’ve never been good at sitting in an office waiting for Friday to come so, decided to start being self-employed. While I started off with engineering projects for companies in the bike industry, I also began to make notes and write down ideas for the bike I would make myself. I soon felt that my excitement wasn’t going to get any less and decided to explore the road of what has now become Vicious!</p>
+          <h1 class="about-article__title">Owner Bio</h1>
+          <p class="about-article__text">
+            After spending my whole life on pedals, finishing my degree in mechanical engineering and working for two large companies making bikes I decided to change my priorities in life.
+          </p>
+          <p class="about-article__text">
+            I’ve never been good at sitting in an office waiting for Friday to come so, decided to start being self-employed.
+          </p>
+          <p class="about-article__text">
+            While I started off with engineering projects for companies in the bike industry, I also began to make notes and write down ideas for the bike I would make myself.
+          </p>
+          <p class="about-article__text">
+            I soon felt that my excitement wasn’t going to get any less and decided to explore the road of what has now become Vicious!
+          </p>
         </div>
       </article>
       <article class="about-article about-article_second-background">
         <div class="about-article__sub-container z1 invert-color">
-          <h1>Who are their customers?</h1>
-          <p class="about-article__text">We cater to clients who want our bikes. Most are passionate about biking and see it as part of a lifestyle. This might mean they are competitive, like to style their vehicles, incorporate biking into their daily lives for transportation, or may just be a weekend warrior. Many members visit the site to place orders and to see the new stock. Our customers know bikes so they don't need large detailed descriptions about each product but they might be interested in the specs. They just need to see the name, price, and image of the product. We are a business-to-customer organization (B2C). Requirements We want a site where customers can explore new bikes and add-ons that inspire and excite them. We want the world to see how fantastic these machines are. The bikes are the main attraction of this website and everything should be designed around that. The website should convey style, quality, power/speed, and freedom.</p>
+          <h1 class="about-article__title">Who are their customers?</h1>
+          <p class="about-article__text">
+            We cater to clients who want our bikes.
+          </p>
+          <p class="about-article__text">
+            Most are passionate about biking and see it as part of a lifestyle.
+          </p>
+          <p class="about-article__text">
+            This might mean they are competitive, like to style their vehicles, incorporate biking into their daily lives for transportation, or may just be a weekend warrior.
+          </p>
+          <p class="about-article__text">
+            Many members visit the site to place orders and to see the new stock.
+          </p>
+          <p class="about-article__text">
+            Our customers know bikes, so they don't need large detailed descriptions about each product, but they might be interested in the specs.
+          </p>
+          <p class="about-article__text">
+            They just need to see the name, price, and image of the product.
+          </p>
+          <p class="about-article__text">
+            We are a business-to-customer organization (B2C).
+          </p>
+          <p class="about-article__text">
+            Requirements We want a site where customers can explore new bikes and add-ons that inspire and excite them. We want the world to see how fantastic these machines are.
+          </p>
+          <p class="about-article__text">
+            The bikes are the main attraction of this website and everything should be designed around that. The website should convey style, quality, power/speed, and freedom.
+          </p>
         </div>
         <div class="shadow"></div>
       </article>
       <article class="about-article">
         <div class="about-article__sub-container">
-          <h1>About Us</h1>
+          <h1 class="about-article__title">About Us</h1>
           <p class="about-article__text">
-            Vicious Cycles Inc is a (your town)-based cycle workshop founded by a few like-minded individuals in late 2010. Our mechanics build the bikes and man the workshop. Our customer service staff attends to the day-to-day operations. We hope to create and foster a strong passion for the local biking scene because each and every one of us is a biking enthusiast.
-            We believe that every machine should be an extension of its owner. We believe in the significance of individualism. We believe in the stories between your cycle and you. We believe in having fun. No matter the circumstances, we bike hard, and we bike often. You get on your bike, you ride, you fall, you might get pulled over, you overcome it all, and you ride again. It’s a Vicious Cycle! So make it worth the while, don't just be part of the numbers. Ride your cycle, chase your dreams, live your life.
+            Vicious Cycles Inc is a (your town)-based cycle workshop founded by a few like-minded individuals in late 2010.
+          </p>
+          <p class="about-article__text">
+            Our mechanics build the bikes and man the workshop. Our customer service staff attends to the day-to-day operations.
+          </p>
+          <p class="about-article__text">
+            We hope to create and foster a strong passion for the local biking scene because each and every one of us is a biking enthusiast.
+          </p>
+          <p class="about-article__text">
+            We believe that every machine should be an extension of its owner.
+          </p>
+          <p class="about-article__text">
+            We believe in the significance of individualism.
+          </p>
+          <p class="about-article__text">
+            We believe in the stories between your cycle and you.
+          </p>
+          <p class="about-article__text">
+            We believe in having fun.
+          </p>
+          <p class="about-article__text">
+            No matter the circumstances, we bike hard, and we bike often.
+          </p>
+          <p class="about-article__text">
+            You get on your bike, you ride, you fall, you might get pulled over, you overcome it all, and you ride again.
+          </p>
+          <p class="about-article__text">
+            It’s a Vicious Cycle!
+          </p>
+          <p class="about-article__text">
+            So make it worth the while, don't just be part of the numbers.
+          </p>
+          <p class="about-article__text">
+            Ride your cycle, chase your dreams, live your life.
           </p>
         </div>
       </article>
