--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
       </article>
       <article class="about-article">
         <img class="photo" src="images/random_dude.jpg" alt="owner's photo">
-        <div class="about-article__sub-container">
+        <div class="about-article__sub-container bio">
           <h1 class="about-article__title">Owner Bio</h1>
           <p class="about-article__text">
             After spending my whole life on pedals, finishing my degree in mechanical engineering and working for two large companies making bikes I decided to change my priorities in life.
