--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,41 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <article class="information-block">
+        <section>
+          <h2>Hours of operations:</h2>
+          <p class="fs2">Monday: <span class="fs2 address">10am-8pm</span></p>
+          <p class="fs2">Tuesday: <span class="fs2 address">10am-8pm</span></p>
+          <p class="fs2">Wednesday: <span class="fs2 address">10am-8pm</span></p>
+          <p class="fs2">Thursday: <span class="fs2 address">10am-8pm</span></p>
+          <p class="fs2">Friday: <span class="fs2 address">10am-7pm</span></p>
+          <p class="fs2">Saturday: <span class="fs2 address">12am-6pm</span></p>
+          <p class="fs2">Sunday: <span class="fs2 address">Closed</span></p>
+        </section>
+        <section>
+          <p class="fs2">Address: <span class="fs2 address">123 Main St. Anywhere, NC 27000</span></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12470.332514741878!2d-78.9164734882152!3d35.487379581137084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1638081262951!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+        <aside class="contact-form__container">
+          <form class="contact-form">
+            <h2>Start the conversation</h2>
+            <p class="fs2-5 mt10">Complete the form below and someone<br>will reach out to you within 24 hours.</p>
+            <label for="fname" class="fs2">First name:</label>
+            <input type="text" id="fname" name="fname" class="contact-form__input">
+            <label for="lname" class="fs2">Last name:</label>
+            <input type="text" id="lname" name="lname" class="contact-form__input">
+            <label for="email" class="fs2">Email:</label>
+            <input type="email" id="email" name="email" class="contact-form__input">
+            <label for="birthday" class="fs2">Phone number:</label>
+            <input type="tel" id="birthday" name="birthday" class="contact-form__input">
+            <label for="message" class="fs2">Message:</label>
+            <textarea id="message" name="birthday" rows="4" class="contact-form__input"></textarea>
+            <input class="button" type="submit" value="Submit">
+          </form>
+        </aside>
+      </article>
+    </main>
     <footer class="footer">
       <div class="footer__sub-container">
         <section class="vertical-alignment">
