--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
           <div class="nav-container__sub-container">
             <a href="index.html" class="nav-container__link">Home</a>
             <a href="catalog.html" class="nav-container__link">Catalog</a>
-            <a href="news.html" class="nav-container__link">News</a>
+            <a href="service.html" class="nav-container__link">Service</a>
             <a href="contacts.html" class="nav-container__link">Contacts</a>
             <a class="nav-container__link nav-container__link_active">About</a>
           </div>
@@ -35,7 +35,7 @@
                   <a href="catalog.html" class="nav-container__link">Catalog</a>
                 </li>
                 <li class="dropdown__item">
-                  <a href="news.html" class="nav-container__link">News</a>
+                  <a href="service.html" class="nav-container__link">Service</a>
                 </li>
                 <li class="dropdown__item">
                   <a href="contacts.html" class="nav-container__link">Contacts</a>
