--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
           <div class="nav-container__sub-container">
             <a href="index.html" class="nav-container__link">Home</a>
             <a class="nav-container__link nav-container__link_active">Catalog</a>
-            <a href="news.html" class="nav-container__link">News</a>
+            <a href="service.html" class="nav-container__link">Service</a>
             <a href="contacts.html" class="nav-container__link">Contacts</a>
             <a href="about.html" class="nav-container__link">About</a>
           </div>
@@ -33,7 +33,7 @@
                   <a href="index.html" class="nav-container__link">Home</a>
                 </li>
                 <li class="dropdown__item">
-                  <a href="news.html" class="nav-container__link">News</a>
+                  <a href="service.html" class="nav-container__link">Service</a>
                 </li>
                 <li class="dropdown__item">
                   <a href="contacts.html" class="nav-container__link">Contacts</a>
