--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vicious Cycles | News</title>
+    <title>Vicious Cycles | Service</title>
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
           <div class="nav-container__sub-container">
             <a href="index.html" class="nav-container__link">Home</a>
             <a href="catalog.html" class="nav-container__link">Catalog</a>
-            <a class="nav-container__link nav-container__link_active">News</a>
+            <a class="nav-container__link nav-container__link_active">Service</a>
             <a href="contacts.html" class="nav-container__link">Contacts</a>
             <a href="about.html" class="nav-container__link">About</a>
           </div>
@@ -46,7 +46,19 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <article class="service-block">
+        <section class="service-block__description">
+          <div class="service-block__description__text">
+            <h2>Bike Service & Repairs</h2>
+            <p class="fs2 mt10">Spirited Cyclist services all major bike brands including Specialized, Cannondale, Trek, Giant, Raleigh, Salsa, Santa Cruz, Canyon, Bianchi, Niner, Fuji, Cervelo, and many more.</p>
+            <p class="fs2 mt10">Our dedicated mechanics have years of experience and have been highly trained. We expect nothing but the best and top quality service. Stop by and let us show you how well your bike can ride!</p>
+          </div>
+          <img alt="repair technician" src="images/repair_service.jpg" class="service-block__description__image"/>
+        </section>
+        <section></section>
+      </article>
+    </main>
     <footer class="footer">
       <div class="footer__sub-container">
         <section class="vertical-alignment">
