--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="nav-container__sub-container">
             <a class="nav-container__link nav-container__link_active">Home</a>
             <a href="catalog.html" class="nav-container__link">Catalog</a>
-            <a href="news.html" class="nav-container__link">News</a>
+            <a href="service.html" class="nav-container__link">Service</a>
             <a href="contacts.html" class="nav-container__link">Contacts</a>
             <a href="about.html" class="nav-container__link">About</a>
           </div>
@@ -32,7 +32,7 @@
                   <a href="catalog.html" class="nav-container__link">Catalog</a>
                 </li>
                 <li class="dropdown__item">
-                  <a href="news.html" class="nav-container__link">News</a>
+                  <a href="service.html" class="nav-container__link">Service</a>
                 </li>
                 <li class="dropdown__item">
                   <a href="contacts.html" class="nav-container__link">Contacts</a>
@@ -72,7 +72,7 @@
           <img alt="repair technician" src="images/repair_service.jpg" class="card-container__item__image"/>
           <h2 class="mt10">Bike Repair</h2>
           <p class="mt10 fs2 card-container__item__text">Whether you need a bike tune-up or a complete overhaul, our expert mechanics are here to help.</p>
-          <a href="" class="button">Learn More</a>
+          <a href="service.html" class="button">Learn More</a>
         </div>
       </section>
       <section class="vertical-alignment now-hiring">
