--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
     </header>
     <main class="main">
       <article class="service-block">
-        <section class="service-block__description">
+        <section class="service-block__description mb10">
           <div class="service-block__description__text">
             <h2>Bike Service & Repairs</h2>
             <p class="fs2 mt10">Spirited Cyclist services all major bike brands including Specialized, Cannondale, Trek, Giant, Raleigh, Salsa, Santa Cruz, Canyon, Bianchi, Niner, Fuji, Cervelo, and many more.</p>
@@ -56,7 +56,38 @@
           </div>
           <img alt="repair technician" src="images/repair_service.jpg" class="service-block__description__image"/>
         </section>
-        <section></section>
+        <section class="service-block">
+          <div class="service-block__options-block">
+            <div class="service-block__options-block__card">
+              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
+              <div class="service-block__options-block__card__description fs2">
+                <p class="fs1-6">Wipe down and inspect bike</p>
+                <p class="fs1-6">Inspect hardware for proper torque</p>
+                <p class="fs1-6">Inflate tires to proper pressure</p>
+                <p class="fs1-6">Adjust derailleurs/braking systems</p>
+                <p class="fs1-6">Wipe and lube chain</p>
+              </div>
+              <div class="service-block__options-block__card__bottom"></div>
+            </div>
+            <div class="service-block__options-block__card">
+              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
+              <div class="service-block__options-block__card__description fs2">
+                Wipe down and inspect bike<br>Inspect hardware for proper torque<br>Inflate tires to proper pressure<br>Adjust derailleurs/braking systems<br>Wipe and lube chain
+              </div>
+              <div class="service-block__options-block__card__bottom"></div>
+            </div>
+            <div class="service-block__options-block__card">
+              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
+              <div class="service-block__options-block__card__description fs2">
+                Wipe down and inspect bike<br>Inspect hardware for proper torque<br>Inflate tires to proper pressure<br>Adjust derailleurs/braking systems<br>Wipe and lube chain
+              </div>
+              <div class="service-block__options-block__card__bottom"></div>
+            </div>
+          </div>
+        </section>
       </article>
     </main>
     <footer class="footer">
