--- a/service.html
+++ b/service.html
@@ -56,11 +56,13 @@
           </div>
           <img alt="repair technician" src="images/repair_service.jpg" class="service-block__description__image"/>
         </section>
-        <section class="service-block">
+        <section>
           <div class="service-block__options-block">
             <div class="service-block__options-block__card">
-              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
-              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
+              <div class="service-block__options-block__card__title bc-bronze">Bronze Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price">
+                <span class="bold">$99</span><p>Plus parts and tax</p>
+              </div>
               <div class="service-block__options-block__card__description fs2">
                 <p class="fs1-6">Wipe down and inspect bike</p>
                 <p class="fs1-6">Inspect hardware for proper torque</p>
@@ -68,23 +70,35 @@
                 <p class="fs1-6">Adjust derailleurs/braking systems</p>
                 <p class="fs1-6">Wipe and lube chain</p>
               </div>
-              <div class="service-block__options-block__card__bottom"></div>
+              <div class="service-block__options-block__card__bottom bc-bronze"></div>
             </div>
             <div class="service-block__options-block__card">
-              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
-              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
-              <div class="service-block__options-block__card__description fs2">
-                Wipe down and inspect bike<br>Inspect hardware for proper torque<br>Inflate tires to proper pressure<br>Adjust derailleurs/braking systems<br>Wipe and lube chain
+              <div class="service-block__options-block__card__title bc-silver">Silver Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price">
+                <span class="bold">$149</span><p>Plus parts and tax</p>
               </div>
-              <div class="service-block__options-block__card__bottom"></div>
+              <div class="service-block__options-block__card__description fs2">
+                <p class="fs1-6">Wipe down and inspect bike</p>
+                <p class="fs1-6">Inspect hardware for proper torque</p>
+                <p class="fs1-6">Inflate tires to proper pressure</p>
+                <p class="fs1-6">Adjust derailleurs/braking systems</p>
+                <p class="fs1-6">Wipe and lube chain</p>
+              </div>
+              <div class="service-block__options-block__card__bottom bc-silver"></div>
             </div>
             <div class="service-block__options-block__card">
-              <div class="service-block__options-block__card__title">Bronze Tune<br>(Just the basic)</div>
-              <div class="service-block__options-block__card__price"><span class="bold">$99</span><br>Plus parts and tax</div>
-              <div class="service-block__options-block__card__description fs2">
-                Wipe down and inspect bike<br>Inspect hardware for proper torque<br>Inflate tires to proper pressure<br>Adjust derailleurs/braking systems<br>Wipe and lube chain
+              <div class="service-block__options-block__card__title bc-gold">Gold Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__price">
+                <span class="bold">$199</span><p>Plus parts and tax</p>
               </div>
-              <div class="service-block__options-block__card__bottom"></div>
+              <div class="service-block__options-block__card__description fs2">
+                <p class="fs1-6">Wipe down and inspect bike</p>
+                <p class="fs1-6">Inspect hardware for proper torque</p>
+                <p class="fs1-6">Inflate tires to proper pressure</p>
+                <p class="fs1-6">Adjust derailleurs/braking systems</p>
+                <p class="fs1-6">Wipe and lube chain</p>
+              </div>
+              <div class="service-block__options-block__card__bottom bc-gold"></div>
             </div>
           </div>
         </section>
