--- a/service.html
+++ b/service.html
@@ -54,14 +54,14 @@
             <p class="fs2 mt10">Spirited Cyclist services all major bike brands including Specialized, Cannondale, Trek, Giant, Raleigh, Salsa, Santa Cruz, Canyon, Bianchi, Niner, Fuji, Cervelo, and many more.</p>
             <p class="fs2 mt10">Our dedicated mechanics have years of experience and have been highly trained. We expect nothing but the best and top quality service. Stop by and let us show you how well your bike can ride!</p>
           </div>
-          <img alt="repair technician" src="images/repair_service.jpg" class="service-block__description__image"/>
+          <img alt="repair technician" src="images/bike-service.jpg" class="service-block__description__image"/>
         </section>
         <section>
           <div class="service-block__options-block">
             <div class="service-block__options-block__card">
               <div class="service-block__options-block__card__title bc-bronze">Bronze Tune<br>(Just the basic)</div>
               <div class="service-block__options-block__card__price">
-                <span class="bold">$99</span><p>Plus parts and tax</p>
+                <span class="fs2 bold">$99</span><p class="fs1-6">Plus parts and tax</p>
               </div>
               <div class="service-block__options-block__card__description fs2">
                 <p class="fs1-6">Wipe down and inspect bike</p>
@@ -73,30 +73,30 @@
               <div class="service-block__options-block__card__bottom bc-bronze"></div>
             </div>
             <div class="service-block__options-block__card">
-              <div class="service-block__options-block__card__title bc-silver">Silver Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__title bc-silver">Silver Tune<br>(Basic and beyond)</div>
               <div class="service-block__options-block__card__price">
-                <span class="bold">$149</span><p>Plus parts and tax</p>
+                <span class="fs2 bold">$149</span><p class="fs1-6">Plus parts and tax</p>
               </div>
               <div class="service-block__options-block__card__description fs2">
-                <p class="fs1-6">Wipe down and inspect bike</p>
-                <p class="fs1-6">Inspect hardware for proper torque</p>
-                <p class="fs1-6">Inflate tires to proper pressure</p>
-                <p class="fs1-6">Adjust derailleurs/braking systems</p>
-                <p class="fs1-6">Wipe and lube chain</p>
+                <p class="fs1-6">Includes Bronze Tune, Plus:</p>
+                <p class="fs1-6">True wheels</p>
+                <p class="fs1-6">Lube cables</p>
+                <p class="fs1-6">Bike washed and polished</p>
+                <p class="fs1-6">Adjusted wheels</p>
               </div>
               <div class="service-block__options-block__card__bottom bc-silver"></div>
             </div>
             <div class="service-block__options-block__card">
-              <div class="service-block__options-block__card__title bc-gold">Gold Tune<br>(Just the basic)</div>
+              <div class="service-block__options-block__card__title bc-gold">Gold Tune<br>(Full service)</div>
               <div class="service-block__options-block__card__price">
-                <span class="bold">$199</span><p>Plus parts and tax</p>
+                <span class="fs2 bold">$199</span><p class="fs1-6">Plus parts and tax</p>
               </div>
               <div class="service-block__options-block__card__description fs2">
-                <p class="fs1-6">Wipe down and inspect bike</p>
-                <p class="fs1-6">Inspect hardware for proper torque</p>
-                <p class="fs1-6">Inflate tires to proper pressure</p>
-                <p class="fs1-6">Adjust derailleurs/braking systems</p>
-                <p class="fs1-6">Wipe and lube chain</p>
+                <p class="fs1-6">Includes Silver Tune, Plus:</p>
+                <p class="fs1-6">Headset cleaned and adjusted</p>
+                <p class="fs1-6">Bottom bracket cleaned and adjusted</p>
+                <p class="fs1-6">Degreased drivetrain</p>
+                <p class="fs1-6">Adjusted gears</p>
               </div>
               <div class="service-block__options-block__card__bottom bc-gold"></div>
             </div>
