--- a/catalog.html
+++ b/catalog.html
@@ -1,4 +1,3 @@
-<!--https://bikepacking.com/index/650b-gravel-bikes/-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,7 +46,30 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <article>
+        <section>
+          <h2>Bikes</h2>
+          <div class="catalog-container">
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+          </div>
+        </section>
+        <section>
+          <h2>Accessories</h2>
+        </section>
+      </article>
+    </main>
     <footer class="footer">
       <div class="footer__sub-container">
         <section class="vertical-alignment">
