--- a/catalog.html
+++ b/catalog.html
@@ -49,8 +49,104 @@
     <main class="main">
       <article>
         <section>
-          <h2>Bikes</h2>
+          <h1 class="ml10">Bikes</h1>
           <div class="catalog-container">
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4400</div>
+              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>3T Exploro</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
             <div class="catalog-item">
               <div class="catalog-item__price">$4400</div>
               <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
@@ -66,7 +162,7 @@
           </div>
         </section>
         <section>
-          <h2>Accessories</h2>
+          <h1 class="ml10">Accessories</h1>
         </section>
       </article>
     </main>
